<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:exported="true"
    tools:context=".MainActivity_login_admin">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:background="#C61652"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.318">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/user2" />

            <EditText
                android:id="@+id/admin_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/lock2" />

            <EditText
                android:id="@+id/admin_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/adforgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/For_pass"
            android:textColor="#F4B2C9"
            android:textSize="15sp" />

        <Button
            android:id="@+id/a_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#E91E63"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="123dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>